# auto-scientist

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: CLAUDE.md
.design/plans/: 2026-03-18-discovery-refactor.md  2026-03-18-generalize-framework-language.md  2026-03-18-retrospective-notebook-entries.md  2026-03-18-sdk-migration.md  2026-03-18-test-catch-up.md  2026-03-18-toy-function-domain.md  2026-03-20-prompt-engineering-rewrite.md
.design/specs/: 2026-03-18-discovery-refactor-design.md  2026-03-18-prompt-engineering-rewrite-design.md  2026-03-18-retrospective-notebook-entries-design.md  2026-03-18-sdk-migration-design.md  2026-03-18-test-catch-up-design.md  2026-03-18-toy-function-domain-design.md
auto-core/: README.md  pyproject.toml
auto-core/src/auto_core/: __init__.py  agent_dispatch.py  agent_result.py  app.py  cli_cleanup.py  config.py  cost_ceiling.py  ensure_deps.py  iteration_manifest.py  latex_to_unicode.py  log_setup.py  model_config.py  orchestrator.py  persistence.py  pipeline_live.py  preferences.py  resume.py  retry.py  roles.py  runner.py  schemas.py  sdk_backend.py  sdk_utils.py  state.py  summarizer.py  testing.py  validation.py  widgets.py
auto-core/src/auto_core/agents/: __init__.py  _mcp_base.py  _notebook_mcp_server.py  _prediction_mcp_server.py  debate_models.py  notebook_query.py  notebook_tool.py  prediction_query.py  prediction_tool.py
auto-core/src/auto_core/models/: anthropic_client.py  google_client.py  openai_client.py
auto-core/src/auto_core/safety/: __init__.py  tool_guard.py
auto-reviewer/: README.md  pyproject.toml
auto-reviewer/scripts/: smoke_adversarial.py  smoke_full_pipeline.py  smoke_prober.py  smoke_sandbox.sh
auto-reviewer/src/auto_reviewer/: __init__.py  _roles.py  cli.py  config.py  prep.py  schemas.py  state.py
auto-reviewer/src/auto_reviewer/agents/: adversary.py  findings.py  hunter.py  intake.py  prober.py  stop_gate.py  surveyor.py
auto-reviewer/src/auto_reviewer/prompts/: __init__.py  adversary.py  findings.py  hunter.py  intake.py  prober.py  stop_gate.py  surveyor.py
auto-reviewer/src/auto_reviewer/safety/: __init__.py  integrity.py
auto-reviewer/tests/: conftest.py  test_cli.py  test_findings.py  test_prompt_contracts.py  test_prompt_defaults.py  test_review_dispatch.py
auto-reviewer/tests/fixtures/buggy-paginate/: README.md  setup_fixture.sh
auto-reviewer/tests/fixtures/buggy-paginate/buggy/src/: paginate.py
auto-reviewer/tests/fixtures/buggy-paginate/good/: pyproject.toml
auto-reviewer/tests/fixtures/buggy-paginate/good/src/: paginate.py
auto-reviewer/tests/fixtures/leaky-config-merge/: README.md  expected.json  setup_fixture.sh
auto-reviewer/tests/fixtures/leaky-config-merge/buggy/src/: config.py
auto-reviewer/tests/fixtures/leaky-config-merge/buggy/tests/: test_config.py
auto-reviewer/tests/fixtures/leaky-config-merge/good/: pyproject.toml
auto-reviewer/tests/fixtures/leaky-config-merge/good/src/: config.py  database.py
auto-reviewer/tests/fixtures/leaky-config-merge/good/tests/: test_config.py
auto-reviewer/tests/safety/: test_agent_guard_wiring.py  test_cli_no_mutation.py  test_config_workspace_pin.py  test_integrity.py  test_prep.py
docs/: architecture.md  auto-reviewer-deferred-work.md  comparison-anthropic-vs-openai-toy-function.md  pipeline-visualizer.html  showcase-alien-minerals.md  showcase-alloy-design.md  showcase-toy-function.md  showcase-water-treatment.md
docs/superpowers/plans/: 2026-03-14-per-iteration-success-criteria.md  2026-03-17-data-ingestion.md  2026-03-17-debate-restructuring.md
docs/superpowers/specs/: 2026-03-13-per-iteration-success-criteria-design.md  2026-03-17-data-ingestion-design.md  2026-03-17-debate-restructuring-design.md  2026-03-18-generalize-framework-language-design.md
domains/alien_minerals/: experiment.yaml
domains/alien_minerals/seed/: generate_data.py  ground_truth.json
domains/alloy_design/: experiment.yaml
domains/alloy_design/seed/: generate_data.py  (+1 more)
domains/example_template/: __init__.py  config.py  experiment.yaml  prompts.py
domains/spo2/: __init__.py  config.py  experiment.yaml  prompts.py
domains/toy_function/: experiment.yaml
domains/water_treatment/: experiment.yaml
research/: critic-model-comparison-2026-03-28.md
scripts/: check_websearch_e2e.py  compare_personas.py  smoke_ephemeral_thread.py  smoke_multimodal.py  smoke_run.py  test_prediction_tool.py  validate_notebook_tool.py  validate_prediction_tool.py  verify_codex_mcp_isolation.py  verify_codex_session_resume.py  verify_deferred_tool_fix.py
src/auto_scientist/: __init__.py  _roles.py  agent_result.py  app.py  cli.py  config.py  console.py  desktop_notifier.py  ensure_deps.py  experiment_config.py  experiment_store.py  history.py  images.py  iteration_manifest.py  launch_app.py  log_setup.py  model_config.py  notebook.py  orchestrator.py  persistence.py  pipeline_live.py  preferences.py  replay.py  resume.py  retry.py  runner.py  scheduler.py  schemas.py  sdk_backend.py  sdk_utils.py  state.py  summarizer.py  synthesis.py  validation.py  widgets.py
tests/: conftest.py  test_agent_openai_defaults.py  test_agent_result.py  test_analyst.py  test_app.py  test_cli.py  test_cli_cleanup.py  test_coder.py  test_config.py  test_config_form.py  test_console.py  test_console_log.py  test_critic.py  test_debate_models.py  test_desktop_notifier.py  test_discovery.py  test_domain_alien_minerals.py  test_domain_alloy_design.py  test_domain_water_treatment.py  test_ensure_deps.py  test_experiment_config.py  test_experiment_screen.py  test_experiment_store.py  test_guardrails.py  test_history.py  test_home_screen.py  test_images.py  test_ingestor.py  test_iteration_manifest.py  test_latex_to_unicode.py  test_launch_app.py  test_launch_app_pty.py  test_log_setup.py  test_mcp_base.py  test_model_config.py  test_models.py  test_notebook.py  test_notebook_tool.py  test_orchestrator.py  test_prediction_tool.py  (+15 more)
tests/safety/: test_hook_adversarial.py  test_sdk_backend_hook_wiring.py  test_tool_guard.py
(+58 files in other folders)
