[project]
name = "auto-scientist"
version = "0.1.0"
description = "Autonomous scientific investigation framework - LLM-driven discovery, iteration, and refinement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk",
    "pydantic>=2.0",
    "click",
    "openai",
    "google-genai",
    "anthropic",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "textual>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
    "ruff>=0.8.0",
]

[project.scripts]
auto-scientist = "auto_scientist.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_scientist"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0",
]
