[project]
name = "auto-scientist"
version = "0.1.0"
description = "Autonomous scientific investigation framework - LLM-driven discovery, iteration, and refinement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk",
    "pydantic>=2.0",
    "click",
    "openai",
    "google-genai",
    "anthropic",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "textual>=8.0.0",
    "pyyaml>=6.0",
    "pylatexenc>=2.10",
    "codex-app-server-sdk>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
    "ruff>=0.8.0",
]

[project.scripts]
auto-scientist = "auto_scientist.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_scientist"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.conftest"
ignore_errors = true  # dynamic mock modules for claude_code_sdk cannot be typed

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0",
    "ruff>=0.15.5",
    "types-pyyaml>=6.0.12.20250915",
]
