[project]
name = "auto-core"
version = "0.1.0"
description = "Shared runtime for Auto-Scientist and Auto-Reviewer: orchestrator, state machine, role registry, MCP scaffolding, LLM client wrappers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk",
    "pydantic>=2.0",
    "openai",
    "google-genai",
    "anthropic",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "textual>=8.0.0",
    "pyyaml>=6.0",
    "pylatexenc>=2.10",
    "codex-app-server-sdk>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_core"]
