[project]
name = "auto-reviewer"
version = "0.1.0"
description = "Autonomous bug-hunting PR reviewer - sibling of auto-scientist running on the shared auto_core runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-core",
    "click",
    "pydantic>=2.0",
]

[project.scripts]
auto-reviewer = "auto_reviewer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_reviewer"]

[tool.uv.sources]
auto-core = { workspace = true }
