[project]
name = "buggy-paginate"
version = "0.1.0"
description = "Fixture for auto-reviewer smoke tests. Contains a paginate() helper."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
